# omspy-brokers

./: README.md  mypy.ini  pyproject.toml  requirements.txt
omspy_brokers/: access_token.txt  alice_blue.py  alice_blue.yaml  alphatrade.py  angel_one.py  angel_one.yaml  bypass.py  dhanhq.py  dhanhq.yaml  finvasia.py  finvasia.yaml  profitmart.py  profitmart.yaml  sasonline.py  zerodha.py
omspy_brokers/XTBinary/: MarketdataSocketExample.py
omspy_brokers/XTConnect/: Connect.py  Example.py  InteractiveSocketExample.py  MarketDataSocketClient.py  MarketdataSocketExample.py  config.ini  log1.txt  shabbir.py  wsocket.py  xts.py  xts.yaml
tests/: test_angel_one.py
