[tool.poetry]
name = "omspy-brokers"
version = "0.1.1"
description = ""
authors = ["darkseid <uberdeveloper001@gmail.com>"]
readme = "README.md"
packages = [{include = "omspy_brokers"}]
repository = "https://github.com/pannet1/omspy"


[tool.poetry.dependencies]
omspy = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
